--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -1,6 +1,8 @@
 <html>
 <head>
   <title>Sema chat</title>
+  <link rel="stylesheet" href="/assets/semantic.css">
   <link rel="stylesheet" href="/assets/css/sema.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
