Added Facebook login authentication

--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -36,6 +36,29 @@
           </div>
         </div>
         <div class="ui fluid large teal submit button">Login</div>
+        <div class="ui horizontal divider">or</div>
+        <div>
+          <div>
+            <a class="ui fluid large facebook button" href="/users/auth/facebook">
+              <i class="facebook icon"></i>
+              Facebook
+            </a>
+          </div>
+          <div class="ui horizontal divider">or</div>
+          <div>
+            <a class="ui twitter fluid large button" href="/users/auth/twitter">
+              <i class="twitter icon"></i>
+              Twitter
+            </a>
+          </div>
+          <div class="ui horizontal divider">or</div>
+          <div>
+            <a class="ui google plus fluid large button" href="/users/auth/google">
+              <i class="google plus icon"></i>
+              Google Plus
+            </a>
+          </div>
+        </div>
         <div id="errors"></div>
       </div>
       <div class="ui error message"></div>
